--- a/har1/index.html
+++ b/har1/index.html
@@ -59,6 +59,7 @@
         <th>timings.wait</th>
         <th>WHERE1</th>
         <th>WHERE2</th>
+        <th>Place</th>
       </tr>
     </thead>
     <tbody id="tbody">
