Tasks-demo-integration

--- a/tasks-demo/index.html
+++ b/tasks-demo/index.html
@@ -42,5 +42,7 @@
 
   <script src="firebase.js" type="module"></script>
   <script src="tasks-demo.js" type="module"></script>
+
+  <script src="tasks-demo-integration.js"></script>
 </body>
 </html>
