--- a/customTab/fetch/index.html
+++ b/customTab/fetch/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch API Config</title>
+    <title>Fetch</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -74,10 +74,7 @@
       <small style="float: right;">
       <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API">📖</a>
     </small>
-      Fetch API Configuration
-
-
-
+      Fetch from here
     </h1>
     
     
